<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_circle_home">
    <TextView
        android:id="@+id/tvChoseImageLibary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choseImageLibary"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:padding="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/farmstay"/>

    <TextView
        android:id="@+id/tvChoseCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choseCamera"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@color/farmstay"/>

</LinearLayout>