<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account_page.ContactActivity">

    <ImageView
        android:id="@+id/imBack3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="850dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/contact" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_white">


                    <TextView
                        android:id="@+id/textViewquery"
                        android:layout_width="141dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="24dp"
                        android:autoLink="phone"
                        android:text="0345154118"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/textViewemail"
                        android:layout_width="244dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="24dp"
                        android:autoLink="email"
                        android:text="farmstayacn@gmail.com"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="141dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="40dp"
                        android:text="@string/phoneNumber"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="141dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="56dp"
                        android:text="@string/askYourQuery"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="141dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="92dp"
                        android:text="@string/emailAddress"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toTopOf="@+id/textView5" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="214dp"
                        android:layout_height="59dp"
                        android:layout_marginStart="35dp"
                        android:text="@string/contactUs"
                        android:textColor="@color/black"
                        android:textSize="40dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="50dp"
                        android:background="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintVertical_bias="0.035" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="40dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:srcCompat="@drawable/phone" />

                    <TextView
                        android:id="@+id/textviewPhone"
                        android:layout_width="141dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="24dp"
                        android:autoLink="phone"
                        android:text="+84345154118"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="35dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3"
                        app:srcCompat="@drawable/email" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="35dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView4"
                        app:srcCompat="@drawable/question" />

                    <ImageView
                        android:id="@+id/imageViewfb"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="35dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView5"
                        app:srcCompat="@drawable/facebook" />

                    <ImageView
                        android:id="@+id/imageViewins"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="24dp"
                        app:layout_constraintStart_toEndOf="@+id/imageViewfb"
                        app:layout_constraintTop_toTopOf="@+id/imageViewfb"
                        app:srcCompat="@drawable/instagram" />

                    <ImageView
                        android:id="@+id/imageViewyt"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="24dp"
                        app:layout_constraintStart_toEndOf="@+id/imageViewins"
                        app:layout_constraintTop_toTopOf="@+id/imageViewfb"
                        app:srcCompat="@drawable/youtube" />

                    <ImageView
                        android:id="@+id/imageViewweb"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="24dp"
                        app:layout_constraintStart_toEndOf="@+id/imageViewyt"
                        app:layout_constraintTop_toTopOf="@+id/imageViewyt"
                        app:srcCompat="@drawable/web" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>